public/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/* 
    color1: grey with high transparency
    color2: pale white
    color3: mountain white
    color4: blue jeans
    color5: dark indigo
    color6: darker blue jeans
    color7: yellow gold
    color8: ocean blue
*/
:root {
    --color1: #07c4f811;
    --color2: #ebeae8;
    --color3: #D6DAE6;
    --color4: #47628d;
    --color5: #1d2c4b;
    --color6: #314870;
    --color7: #e8b782;
    --color8: #00314F;
    
    font-family: "Commissioner", sans-serif;
    box-sizing: border-box;
}

body {
    display: flex;              
    justify-content: center;        
    align-items: center;       

    min-height: 100vh;
    background-image: radial-gradient(circle, var(--color3), var(--color4));
}

.container {
    position: relative;
    width: 850px;
    height: 550px;

    display: flex;
    align-items: center;
    background-color: var(--color1);
    box-shadow: 5px 5px 20px var(--color6);
    color: var(--color5);

    overflow: hidden;
    border-radius: 50px;
}

/* The position of both register and login is absolute relative (container's relative position) so to the left and top */
.input-box {
    position: absolute; 
    width: 50%;
    height: 65%;
}

.input-box p {
    display: block;
    align-content: center;
    text-align: center;
    margin: 0;
}

.input-box form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

/* Have the feather icons position to be absolute relative to the div parent element (also to the right)*/

.input-box div {
    position: relative;
    display: flex;
    align-items: center;
}

.input-box svg {
    position: absolute;
    left: 90%;
    width: 20px;
    height: auto;
    z-index: 10;
}

.register .fullname {
    display: flex;
    justify-content: center;
    gap: 5px;
}

#first-name, #last-name {
    width: 122px;
    height: 35px;
}

.input-box input {
    width: 275px;
    height: 35px;
    border: 1.5px solid var(--color2);
    border-radius: 5px;
    background-color: var(--color2);
    padding: 2px 10px;

    box-shadow: 1.5px 3px 3px var(--color4);
}

.input-box input:focus {
    outline: none;
    border-color: blue;
}

.input-box button {
    border: 1px solid var(--color5);
    border-radius: 5px;
    background-color: var(--color5);
    color: var(--color2);
    font-size: 1em;
    transition: all 0.2s ease-in;
    cursor: pointer;

    box-shadow: 0 3px 2px var(--color4);
}

.input-box button:hover {
    border: 1.5px solid var(--color5);
    background-color: var(--color9);
    color: var(--color5);
}

.input-box button, .input-box p { 
    width: 295px;
    height: 35px;
}

.input-box h1 { text-align: center;}


/*  The register and login divs switch places when button to register or to login is clicked 
    Register is at first hidden and it starts to the left by half of the container's width size
    Login is initially visible and seen in the right of the container
*/
.register {
    left: 425px;
    visibility: hidden;
    transition: left 0.6s ease-out 1s, visibility 0.1s ease-in-out 0.5s;
}

.container.active .register{
    left: 0;
    visibility: visible;
}

.login {
    left: 425px;
    visibility: visible;
    transition: left 0.6s ease-out 1s, visibility 0.1s ease-in-out 0.5s;
}

.container.active .login {
    left: 0;
    visibility: hidden;
}


/* Only add cursor pointer to the eye toggle icons*/
.login div:nth-child(2) svg {
    cursor: pointer;
}

.register div:nth-child(3) svg {
    cursor: pointer;
}

/*  To show the slider moving, it is expanded first to have a longer fluid transition
    Then it initially starts to the left by half of its width
*/
.slider {
    position: absolute;
    width: 200%;
    height: 100%;
    color: var(--color2);
    display: flex;
    border-radius: 100px;
    background: var(--color5);
    left: -1275px;
    transition: left 1.5s ease-in-out;
}

.container.active .slider {
    left: 425px;
}

.slider button {
    width: 100px;
    height: 35px;
    background-color: var(--color5);
    color: var(--color2);
    border: 1px solid var(--color2);
    border-radius: 10px;
    border-color: var(--color2);
    cursor: pointer;
    transition: all 0.2s ease-in;
}

.slider button:hover {
    background-color: var(--color2);
    color: var(--color5);
    transform: scale(1.05, 1.05);
}

.welcome, .welcome-back {
    position: absolute;
    width: 25%;
    margin-top: 150px;
    text-align: center;
}

/* Welcome to Contacts Manager is seen at the beginning*/
.welcome {
    left: 1275px;
    opacity: 100%;
    transition: left 1.5s ease-in-out, opacity 1s ease-in;
}
/* Welcome to Contacts Manager is moved to the left of the container (hidden due to containers' hidden overflow)*/
.container.active .welcome {
    left: -850px;
    opacity: 0%;
}

/* Welcome back message is initially hidden */
.welcome-back {
    left: 2125px;
    transition: left 1.5s ease-in-out, opacity 1s ease-in;
    opacity: 0%;
}

/* The welcome back message is visible*/
.container.active .welcome-back {
    left: 0;
    opacity: 100%;
}

/* Mobile */
@media only screen and (max-width: 768px) {
    body {
        display: flex;              
        justify-content: center;        
        align-items: center;       
        
        min-height: 100vh;
        background-image: radial-gradient(circle, var(--color3), var(--color4));
    }

    .container {
        height: 750px;
        width: 550px;
    
        flex-direction: column;
        justify-content: center;
    }

    /* Inputs */

    /* The position of both register and login is absolute relative (container's relative position) so to the left and top */
    .input-box {
        justify-items: center;
        width: 100%;
    }

    .input-box form {
        width: 65%;
    }

    .input-box div {
        width: 100%;
        justify-content: center;
    }

    .register .fullname {
        display: flex;
        justify-content: center;
        gap: 5px;
    }

    #first-name, #last-name {
        width: 50%;
    }

    .input-box input {
        width: 100%;
    }

    .input-box button, .input-box p { 
        width: 100%;
    }

    /*  The register and login divs switch places when button to register or to login is clicked 
    Register is at first hidden and it starts to the left by half of the container's width size
    Login is initially visible and seen in the right of the container
    */

    /* Register & Login */
    .register, .login {
        position: absolute;
        width: 100%;
    }

    .register {
        left: 0;
        bottom: 150px;
        transition: bottom 0.6s ease-out 1s, visibility 0.1s ease-in-out 0.5s;;
    }
    
    .container.active .register{
        bottom: -50px;
    }
    
    .login {
        left: 0;
        bottom: 150px;
        transition: bottom 0.6s ease-out 1s, visibility 0.1s ease-in-out 0.5s;;
    }
    
    .container.active .login {
        bottom: 0;
    }
    /* Register & Login */



    /*  To show the slider moving, it is expanded first to have a longer fluid transition
        Then it initially starts to the left by half of its width
    */
    .slider {
        width: 100%;
        height: 200%;
        
        left: 0;
        bottom: -1225px;
        transition: bottom 1.5s ease-in-out;
    }

    .container.active .slider {
        left: 0;
        bottom: 475px;
    }

    .welcome, .welcome-back {
        width: 100%;
        justify-items: center;
    }


 
    /* Welcome to Contacts Manager is seen at the beginning*/
    .welcome {
        left: 0;
        bottom: 1255px;
        transition: bottom 1.5s ease-in-out, opacity 1s ease-in;
    }
    /* Welcome to Contacts Manager is moved to the left of the container (hidden due to containers' hidden overflow)*/
    .container.active .welcome {
        left: 0;
        bottom: -850px;
    }

    /* Welcome back message is initially hidden */
    .welcome-back {
        left: 0;
        bottom: 2125px;
        transition: bottom 1.5s ease-in-out, opacity 1s ease-in;
    }

    /* The welcome back message is visible*/
    .container.active .welcome-back {
        left: 0;
        bottom: 50px;
    }
}

